postcss/testData/inspections/customMedia/emptyCustomMedia.pcss
@custom-media<error descr="an identifier expected"> </error>;
@custom-media --my<EOLError descr="';' expected"></EOLError>
@custom-media<EOLError descr="an identifier expected"></EOLError><EOLError descr="';' expected"></EOLError>